--- a/index.html
+++ b/index.html
@@ -7,6 +7,18 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
+    <header>
+        <h2 class="logo">logo</h2>
+        <nav class="navigation">
+            <a href="#" class="active">Home <span></span></a>
+            <a href="#">About <span></span></a>
+            <a href="#">Service <span></span></a>
+            <a href="#">Contact <span></span></a>
+        </nav>
+    </header>
+
+    <section class="Parallax">
+        <h2 id="text">Parallax Website</h2>
+    </section>
 </body>
 </html>
