--- a/index.html
+++ b/index.html
@@ -1,24 +1,67 @@
 <!DOCTYPE html>
 <html lang="javascriptreact">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Parallax Website</title>
-    <link rel="stylesheet" href="style.css">
-</head>
-<body>
+    <link rel="stylesheet" href="style.css" />
+  </head>
+  <body>
     <header>
-        <h2 class="logo">logo</h2>
-        <nav class="navigation">
-            <a href="#" class="active">Home <span></span></a>
-            <a href="#">About <span></span></a>
-            <a href="#">Service <span></span></a>
-            <a href="#">Contact <span></span></a>
-        </nav>
+      <h2 class="logo">logo</h2>
+      <nav class="navigation">
+        <a href="#" class="active">Home <span></span></a>
+        <a href="#">About <span></span></a>
+        <a href="#">Service <span></span></a>
+        <a href="#">Contact <span></span></a>
+      </nav>
     </header>
 
     <section class="Parallax">
-        <h2 id="text">Parallax Website</h2>
+      <h2 id="text">Parallax Website</h2>
+      <img src="/images/tree-left.png" id="tree-left" />
+      <img src="/images/tree-right.png" id="tree-right" />
+      <img src="/images/gate-left.png" id="gate-left" />
+      <img src="/images/gate-right.png" id="gate-right" />
+      <img src="/images/grass.png" id="grass" />
     </section>
-</body>
+
+    <section class="sec">
+      <h2>Parallax Scrolling Website</h2>
+      <p>
+        Lorem ipsum dolor, sit amet consectetur adipisicing elit. Suscipit
+        possimus quibusdam rerum laboriosam repellendus aliquam fugit minima
+        reprehenderit odio alias, corporis veniam nemo vitae ut sequi animi,
+        placeat aliquid! Dolores quidem facere autem deserunt aperiam? Earum
+        nesciunt excepturi fuga labore, perspiciatis recusandae veritatis nemo
+        quidem eveniet molestias natus est sint molestiae quia provident, amet
+        corrupti libero doloremque dolore, dolores esse eum maiores repudiandae!
+        Recusandae aut deleniti inventore nostrum illum atque asperiores veniam
+        perferendis vero sapiente vel voluptatum adipisci natus vitae, ducimus
+        dolorum obcaecati distinctio accusantium aspernatur magni dolores esse.
+        Repellendus, unde! Natus, beatae iste. Harum quo officiis expedita iusto
+        excepturi. <br />
+        Dignissimos, quae! Voluptatum reiciendis id cupiditate voluptatem. Nihil
+        totam unde beatae dignissimos velit neque nobis? Facilis architecto
+        accusamus sint dolorem labore temporibus ullam blanditiis minima, quidem
+        quos, harum delectus libero ipsa suscipit explicabo amet ad illum iste
+        perferendis. Optio, veniam explicabo neque assumenda nesciunt deserunt?
+        Rerum iusto necessitatibus aliquam cupiditate illum nobis hic suscipit
+        maxime voluptates. <br> 
+        Quaerat minima omnis, esse recusandae fugit id enim
+        quae voluptate modi in exercitationem consequuntur nemo sapiente aut
+        nihil distinctio ratione. Enim, omnis consequatur unde similique maxime
+        obcaecati dolores quos reprehenderit modi nihil provident facere
+        officiis itaque asperiores! Voluptatum, commodi voluptas eligendi sit
+        deleniti molestiae aspernatur. Suscipit molestias voluptatum ipsam
+        excepturi modi laborum earum odit placeat assumenda recusandae at
+        quaerat iure autem nostrum repellendus culpa eum praesentium inventore,
+        commodi provident tempora! Minus ducimus excepturi odit nesciunt, quam
+        deserunt dolorem impedit at fugiat ab voluptatum quas quis cupiditate
+        aperiam veritatis neque molestias placeat commodi in asperiores.<br /><br />
+      </p>
+    </section>
+
+    <script src="script.js"></script>
+  </body>
 </html>
